infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily-basket-api
  namespace: daily-basket
  labels:
    app.kubernetes.io/name: daily-basket-api
    app.kubernetes.io/component: backend-api
    app.kubernetes.io/part-of: daily-basket-platform
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: daily-basket-api
  template:
    metadata:
      labels:
        app: daily-basket-api
        tier: backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: ghcr.io/sachinxcode-01/daily-basket-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
          livenessProbe:
            httpGet:
              path: /api/v1/observability/liveness
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/v1/observability/readiness
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
