infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daily-basket-api-service
  namespace: daily-basket
  labels:
    app.kubernetes.io/name: daily-basket-api
    app.kubernetes.io/component: backend-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app: daily-basket-api
